@@ -8571,7 +8571,8 @@
   else if (GET_CODE (val) == SUBREG
 	   && (submode = GET_MODE (SUBREG_REG (val)),
 	       GET_MODE_BITSIZE (mode) > GET_MODE_BITSIZE (submode))
-	   && pos + len <= GET_MODE_BITSIZE (submode))
+	   && pos + len <= GET_MODE_BITSIZE (submode)
+	   && GET_MODE_CLASS (submode) == MODE_INT)
     {
       /* Narrow a paradoxical subreg to prevent partial register stalls.  */
       mode = submode;
